--- a/processed_landscape.yml
+++ b/processed_landscape.yml
@@ -5604,6 +5604,32 @@ landscape:
               percentage: null
             twitter_data:
               latest_tweet_date: 2019-12-19T13:18:00.000Z
+          - item:
+            name: Huawei
+            logo: huawei.svg
+            crunchbase: 'https://www.crunchbase.com/organization/huawei'
+            homepage_url: 'http://huawei.com/'
+            twitter: 'https://twitter.com/Huawei'
+            crunchbase_data:
+              name: Huawei Technologies
+              description: 'Huawei Technologies provides infrastructure application software and devices with wireline, wireless, and IP technologies.'
+              num_employees_min: 5001
+              num_employees_max: 10000
+              homepage: 'http://huawei.com'
+              city: Shenzhen
+              region: Guangdong
+              country: China
+              twitter: 'https://twitter.com/Huawei'
+              linkedin: 'https://www.linkedin.com/company/huawei/'
+              parents: []
+            image_data:
+              fileName: huawei.svg
+              hash: 2EzPM0nxaY7FP8hejX13fWBbi99eQNy9bxeIONiwrWo=
+            best_practice_data:
+              badge: false
+              percentage: null
+            twitter_data:
+              latest_tweet_date: 2020-01-07T12:32:58.000Z
       - subcategory:
         name: General
         items:
