--- a/settings.yml
+++ b/settings.yml
@@ -118,7 +118,7 @@ big_picture:
       - type: HorizontalCategory
         category: Resources
         rows: 3
-        width: 750
+        width: 650
         height: 170
         top: 220
         left: 0
@@ -128,18 +128,18 @@ big_picture:
         category: Data
         rows: 8
         width: 1173
-        height: 300
+        height: 280
         top: 420
         left: 0
         color: 'rgb(108,135,75)'
-        fit_width: true
+        fit_width: false
       - type: VerticalCategory
         category: LF Data Management and Analytics Propsective Member Company
-        cols: 10
-        width: 400
+        cols: 12
+        width: 500
         height: 200
         top: 190
-        left: 770
+        left: 670
         color: 'rgb(124, 200, 182)'
         fit_width: true
       - type: LandscapeInfo
