--- a/settings.yml
+++ b/settings.yml
@@ -2,7 +2,7 @@ global:
   name: LF Data Management and Analytics Interactive Landscape
   short_name: LF Data Management and Analytics
   repo: lfdata/lfdata-landscape
-  website: 'https://landscape.lfdata.foundation'
+  website: 'https://lfdata-landscape.netlify.com/'
   short_domain: l.lfdata.foundation
   company_url: 'https://lfdata.foundation'
   email: info@lfdata.foundation
